--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
             android:id="@+id/contenedor"
             android:name="com.example.pruebafragment.BlankFragmenPrueba"
             android:layout_width="match_parent"
-            android:layout_height="620dp"
+            android:layout_height="wrap_content"
             tools:layout="@layout/feed_fragment" />
     </FrameLayout>
 
