--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,22 +3,22 @@
     <item
         android:id="@+id/item_1"
         android:enabled="true"
-        android:icon="@drawable/ic_android"
-        android:title="@string/android"/>
+        android:icon="@android:drawable/checkbox_off_background"
+        android:title="Feed" />
     <item
         android:id="@+id/item_2"
         android:enabled="true"
-        android:icon="@drawable/ic_android"
-        android:title="@string/android"/>
+        android:icon="@android:drawable/ic_input_add"
+        android:title="Nuevo proyecto" />
 
     <item
         android:id="@+id/item_3"
         android:enabled="true"
-        android:icon="@drawable/ic_android"
-        android:title="@string/android"/>
+        android:icon="?attr/actionModePasteDrawable"
+        android:title="Mis proyectos" />
     <item
         android:id="@+id/item_4"
         android:enabled="true"
         android:icon="@drawable/ic_android"
-        android:title="@string/android"/>
+        android:title="Perfil" />
 </menu>
