--- a/src/main/res/layout/fragment_perfil_.xml
+++ b/src/main/res/layout/fragment_perfil_.xml
@@ -84,7 +84,7 @@
             app:layout_constraintVertical_bias="0.514" />
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-            android:id="@+id/mis_proyectos"
+            android:id="@+id/cambiar_imagen_nuevoProyecto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
